templates and inheritance

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Index Page</title>
-</head>
-<body>
-    <h1>Hello World!</h1>
-    <h2>Hello Serhii...</h2>
-</body>
-</html>
+{% extends 'blog/base_blog.html' %}
+
+{% block title %}
+    Blog Engine
+{% endblock %}
+
+
+{% block content %}
+
+    <h1 class="mb-5">Posts:</h1>
+
+    {% for name in names %}
+        <p>{{ name }}</p>
+    {% endfor %}
+{% endblock %}
+
