--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base_blog.html' %}
 
 {% block title %}
-    {{ post.title }} - {{ blog.super }}
+    {{ post.title }} - {{ block.super }}
 {% endblock %}
 
 {% block content %}
