Delete Posts and Tags

--- a/blog/templates/blog/post_update_form.html
+++ b/blog/templates/blog/post_update_form.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     
-    <form action="{{ post.get_update_url }}" method="post">
+    <form class="" action="{{ post.get_update_url }}" method="post">
 
         {% csrf_token %}
 
