--- a/blog/templates/blog/base_blog.html
+++ b/blog/templates/blog/base_blog.html
@@ -1,1 +1,17 @@
 {% extends 'base.html' %}
+
+{% block admin-panel %}
+
+    <div class="btn-group">
+        <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Create
+        </button>
+        <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="{% url 'post_create_url' %}">Post</a></li>
+            <li><a class="dropdown-item" href="{% url 'post_create_url' %}">Tag</a></li>
+        </ul>
+    </div>
+
+    <a href="{{ admin_object.get_update_url }}" class="btn btn-light edit" style=" {% if detail %}display:block;{% endif %}">Edit</a>
+    <a href="{{ admin_object.get_delete_url }}" class="btn btn-danger delete" style=" {% if detail %}display:block;{% endif %}">Delete</a>
+{% endblock %}
